fixed extra side area. Made sure nav bar was removed from a row as it does not need to be in a container to span the full width of the site. Also, put a margin-bottom: 0; for the .footer p ----- this removed extra space on the bottom

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,3 +120,14 @@ body {
    align-content: center; 
    text-align: justify; 
 }
+
+.footer {
+background-color: #333; 
+color: white; 
+text-align: center; 
+/* padding: 5px;  */
+}
+
+.footer p {
+    margin-bottom: 0;
+}
